<resources>
    <string name="app_name">Movies Dictionary</string>
    <string name="title_categories">Categories</string>
    <string name="title_popular">Popular</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_top_rate">Top rate</string>
    <string name="title_now_playing">Now playing</string>
    <string name="title_genres">Genres</string>
    <string name="title_search">Search</string>
    <string name="title_trailers">Trailers</string>
    <string name="title_overview">Overview</string>
    <string name="title_actors">Actors</string>
    <string name="title_companies">Companies</string>
    <string name="title_favorite_storage">Favorite storage</string>
    <string name="title_favorite">Favorite</string>
    <string name="view_all">View all</string>
    <string name="hint_search">Search movie</string>
    <string name="text_total_result">Total result</string>
    <string name="notify_add_success">Add successfully</string>
    <string name="action_open_favorite">Open Favorite</string>
    <string name="notify_remove_success">Remove successfully</string>
    <string name="action_undo">Undo</string>
    <string name="notify_no_movies">No movies found</string>
</resources>
